exit account add

--- a/content.html
+++ b/content.html
@@ -288,23 +288,27 @@
             <a href="#" class="logo"></a>
         </div>
         <div class="header">
-            <!-- <div class="user">
+            <div class="user">
                 سلام پویان سلمانی
                 <a href="#" class="signupButtonLayer">
                     <div class="click"></div>
                     <button class="orangeButton  alt">پروفایل</button>
                 </a>
-            </div> -->
-            <a href="#" class="signupButtonLayer">
+            </div>
+            <!-- <a href="#" class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton  alt">ثبت نام</button>
-            </a>
+            </a> -->
 
             <div class="rest">
                 <div class="layer2">
-                    <a href="#" class="item one">
+                    <!-- <a href="#" class="item one">
                         <div class="img one"></div>
                         <span>ورود اعضاء</span>
+                    </a> -->
+                    <a href="#" class="item one">
+                        <div class="img one"></div>
+                        <span>خروج از حساب</span>
                     </a>
                     <a href="#" class="item two">
                         <div class="img two"></div>
@@ -313,10 +317,6 @@
                     <a href="#" class="item three">
                         <div class="img three"></div>
                         <span>تماس با ما</span>
-                    </a>
-                    <a href="#" class="item four">
-                        <div class="img four"></div>
-                        <span>همکاری با ما</span>
                     </a>
                 </div>
                 <div class="inputWrapper">
