corporate with us button added

--- a/content.html
+++ b/content.html
@@ -248,8 +248,6 @@
     </div>
 </div>
 
-<div class="ad"></div>
-
 <header class="header">
     <div class="topBar">
         <span class="menu" id="resOpen">☰</span>
@@ -288,17 +286,17 @@
             <a href="#" class="logo"></a>
         </div>
         <div class="header">
-            <div class="user">
+            <!-- <div class="user">
                 سلام پویان سلمانی
                 <a href="#" class="signupButtonLayer">
                     <div class="click"></div>
                     <button class="orangeButton  alt">پروفایل</button>
                 </a>
-            </div>
-            <!-- <a href="#" class="signupButtonLayer">
+            </div> -->
+            <a href="#" class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton  alt">ثبت نام</button>
-            </a> -->
+            </a>
 
             <div class="rest">
                 <div class="layer2">
@@ -323,6 +321,11 @@
                     <input type="text" class="mainSearch" placeholder="جستجو..." />
                     <i class="fas fa-search"></i>
                 </div>
+            </div>
+
+            <div class="Cooperation">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.75 84.19"><defs><style>.cls-1{fill:#d60b52;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="TopMwnu"><path id="_439859488" data-name=" 439859488" class="cls-1" d="M141.47,53.1a42.4,42.4,0,0,1,29.28,31.09h-9.21c-1.77-9.51-5.76-17.85-11.17-23.85a32.57,32.57,0,0,0-9.05-7.13Zm-98.14-35h0A17.77,17.77,0,0,1,61.05,35.86h0A17.76,17.76,0,0,1,43.33,53.57h0A17.76,17.76,0,0,1,25.62,35.86h0A17.76,17.76,0,0,1,43.33,18.14Zm-14.06,35A42.39,42.39,0,0,0,0,84.19H9.22C11,74.68,15,66.34,20.38,60.34a32.42,32.42,0,0,1,9.05-7.13ZM28.9,83.69H13.39A44.67,44.67,0,0,1,23.35,63a27.11,27.11,0,0,1,10.4-7.35,19.3,19.3,0,0,0,7.3,1.43h0a19.16,19.16,0,0,0,3.81-.38,53.34,53.34,0,0,0-16,27ZM101.47,45a53.49,53.49,0,0,1,37,39.24H126.8c-2.22-12-7.27-22.53-14.1-30.1a40.71,40.71,0,0,0-11.41-9l.18-.15Zm-55,39.24H34.79A53.48,53.48,0,0,1,71.75,45l.19.14a40.6,40.6,0,0,0-11.42,9c-6.82,7.57-11.88,18.09-14.1,30.1Zm31-36a33.85,33.85,0,0,0-13.13,9.28c-5.93,6.58-10.4,15.66-12.58,26.09h69.84c-2.19-10.43-6.65-19.51-12.58-26.09a33.85,33.85,0,0,0-13.13-9.28A24.38,24.38,0,0,1,86.61,50h0A24.38,24.38,0,0,1,77.4,48.19Zm51.95-30.7h0a17.76,17.76,0,0,1,17.71,17.72h0a17.76,17.76,0,0,1-17.71,17.72h0a17.77,17.77,0,0,1-17.72-17.72h0A17.78,17.78,0,0,1,129.35,17.49ZM86.17,0h0a22.42,22.42,0,0,1,22.36,22.36h0A22.43,22.43,0,0,1,86.17,44.73h0A22.43,22.43,0,0,1,63.8,22.36h0A22.43,22.43,0,0,1,86.17,0Zm55.67,83.69h15.52A44.77,44.77,0,0,0,147.4,63,27.11,27.11,0,0,0,137,55.67a19.38,19.38,0,0,1-7.3,1.43h0a19.08,19.08,0,0,1-3.81-.38A53.26,53.26,0,0,1,141.84,83.69Z"/></g></g></svg>
+                همکاری با ما
             </div>
 
         </div>
