slider made dynamic

--- a/content.html
+++ b/content.html
@@ -604,10 +604,37 @@
         <div class="slider">
             <div id="slider" data-timeout="4000">
                 <div class="images">
-                    <img src="./images/img/homeSlider-react-4.png" alt="">
-                    <img src="./images/img/homeSlider-DDD-3.png" alt="">
-                    <img class="active" src="./images/img/homeSlider-Python.png" alt="">
-                    <img src="./images/img/homeSlider-NodeJS-3.png" alt="">
+                    <div class="img active">
+                        <span class="title purple">C#.NET</span>
+                        <span class="des">دوره آموزشی برنامه نویسی سی شارپ</span>
+                        <img src="./images/img/homeSlider-Blank.png" alt="">
+                        <a href="#" class="button">ببینید!</a>
+                    </div>
+                    <div class="img">
+                        <span class="title orange">Enterprise software</span>
+                        <span class="des">دوره آموزشی معماری نرم افزار در دات نت</span>
+                        <img src="./images/img/homeSlider-Blank.png" alt="">
+                        <a href="#" class="button">ببینید!</a>
+                    </div>
+                    <div class="img">
+                        <span class="title green">Node JS</span>
+                        <span class="des">دوره آموزش نود جی اس</span>
+                        <img src="./images/img/homeSlider-Blank.png" alt="">
+                        <a href="#" class="button">ببینید!</a>
+                    </div>
+                    <div class="img">
+                        <span class="title yellow">Python</span>
+                        <span class="des">دوره آموزشی پایتون</span>
+                        <img src="./images/img/homeSlider-Blank.png" alt="">
+                        <a href="#" class="button">ببینید!</a>
+                    </div>
+                    <div class="img">
+                        <span class="title lightBlue">React</span>
+                        <span class="des">دوره آموزشی ریکت</span>
+                        <img src="./images/img/homeSlider-Blank.png" alt="">
+                        <a href="#" class="button">ببینید!</a>
+                    </div>
+
                 </div>
                 <i class="fas fa-angle-right" id="sliderNext"></i>
                 <i class="fas fa-angle-left" id="sliderPre"></i>
