slider res done

--- a/content.html
+++ b/content.html
@@ -604,32 +604,37 @@
         <div class="slider">
             <div id="slider" data-timeout="4000">
                 <div class="images">
-                    <div class="img active">
-                        <span class="title purple">C#.NET</span>
+                    <div class="img purple active">
+                        <span class="institute"></span>
+                        <span class="title">C#.NET</span>
                         <span class="des">دوره آموزشی برنامه نویسی سی شارپ</span>
                         <img src="./images/img/homeSlider-Blank.png" alt="">
                         <a href="#" class="button">ببینید!</a>
                     </div>
-                    <div class="img">
-                        <span class="title orange">Enterprise software</span>
+                    <div class="img orange">
+                        <span class="institute"></span>
+                        <span class="title">Enterprise software</span>
                         <span class="des">دوره آموزشی معماری نرم افزار در دات نت</span>
                         <img src="./images/img/homeSlider-Blank.png" alt="">
                         <a href="#" class="button">ببینید!</a>
                     </div>
-                    <div class="img">
-                        <span class="title green">Node JS</span>
+                    <div class="img lightGreen">
+                        <span class="institute"></span>
+                        <span class="title">Node JS</span>
                         <span class="des">دوره آموزش نود جی اس</span>
                         <img src="./images/img/homeSlider-Blank.png" alt="">
                         <a href="#" class="button">ببینید!</a>
                     </div>
-                    <div class="img">
-                        <span class="title yellow">Python</span>
+                    <div class="img yellow">
+                        <span class="institute"></span>
+                        <span class="title">Python</span>
                         <span class="des">دوره آموزشی پایتون</span>
                         <img src="./images/img/homeSlider-Blank.png" alt="">
                         <a href="#" class="button">ببینید!</a>
                     </div>
-                    <div class="img">
-                        <span class="title lightBlue">React</span>
+                    <div class="img lightBlue">
+                        <span class="institute"></span>
+                        <span class="title">React</span>
                         <span class="des">دوره آموزشی ریکت</span>
                         <img src="./images/img/homeSlider-Blank.png" alt="">
                         <a href="#" class="button">ببینید!</a>
@@ -644,7 +649,6 @@
         </div>
     </div>
 </header>
-
 <a href="#" class="atnaHost">
     آتنا‌هاست
     <span>همیشه میزبان شماییم</span>
