7/29 good state. making the comments

--- a/Run.html
+++ b/Run.html
@@ -37,7 +37,11 @@
             $('#footerContainer').load('../content.html')
         })
     </script>
-
+<style>
+    * {
+        font-family: iransansx;
+    }
+</style>
     <div id="footerContainer"></div>
 
 
