--- a/content.html
+++ b/content.html
@@ -1,3 +1,15 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js    "></script>
+<a href="#" id="attention" data-date="07/26">
+    <!-- data-date="mm/dd" -->
+    <img src="./images/img/Asset 223.svg" alt="" class="icon">
+    <div class="text">
+        <span>0</span>
+        روز مانده به شروع دوره
+    </div>
+    <img src="./images/img/Asset 24.svg" alt="" class="centerIcon">
+    <div class="courseName">Web Design</div>
+</a>
+
 <div id="resMenu">
     <i class="fas fa-times" id="resClose"></i>
     <div class="OriginContent">
@@ -252,22 +264,23 @@
     <div class="topBar">
         <span class="menu" id="resOpen">☰</span>
         <div class="right">
-            <span>021-88146330</span>
+            <span>021-88146323</span>
             <div class="wrap">
                 <span>021-88146330</span>
                 <div class="phone"></div>
             </div>
             <div class="wrap email">
-                <span>info@tahlildadeh.com</span>
+                <span>tahlildadehins@gmail.com</span>
                 <div class="envelope"></div>
             </div>
         </div>
         <div class="center">
-            <a target="_blank" class="fab fa-youtube" href="https://www.youtube.com/user/tahlildadeh" ></a>
-            <a target="_blank" class="fab fa-instagram" href="https://www.instagram.com/tahlildadeh" ></a>
-            <a target="_blank" class="fab fa-linkedin-in" href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/"></a>
-            <a target="_blank" class="fab fa-whatsapp" href="https://chatwith.io/s/tahlildadeh" ></a>
-            <a target="_blank" class="fab fa-telegram-plane" href="https://t.me/tahlildadeh" ></a>
+            <a target="_blank" class="fab fa-youtube" href="https://www.youtube.com/user/tahlildadeh"></a>
+            <a target="_blank" class="fab fa-instagram" href="https://www.instagram.com/tahlildadeh"></a>
+            <a target="_blank" class="fab fa-linkedin-in"
+                href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/"></a>
+            <a target="_blank" class="fab fa-whatsapp" href="https://chatwith.io/s/tahlildadeh"></a>
+            <a target="_blank" class="fab fa-telegram-plane" href="https://t.me/tahlildadeh"></a>
 
         </div>
         <div class="left" data-onClick="active">
@@ -324,7 +337,21 @@
             </div>
 
             <div class="Cooperation">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.75 84.19"><defs><style>.cls-1{fill:#d60b52;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="TopMwnu"><path id="_439859488" data-name=" 439859488" class="cls-1" d="M141.47,53.1a42.4,42.4,0,0,1,29.28,31.09h-9.21c-1.77-9.51-5.76-17.85-11.17-23.85a32.57,32.57,0,0,0-9.05-7.13Zm-98.14-35h0A17.77,17.77,0,0,1,61.05,35.86h0A17.76,17.76,0,0,1,43.33,53.57h0A17.76,17.76,0,0,1,25.62,35.86h0A17.76,17.76,0,0,1,43.33,18.14Zm-14.06,35A42.39,42.39,0,0,0,0,84.19H9.22C11,74.68,15,66.34,20.38,60.34a32.42,32.42,0,0,1,9.05-7.13ZM28.9,83.69H13.39A44.67,44.67,0,0,1,23.35,63a27.11,27.11,0,0,1,10.4-7.35,19.3,19.3,0,0,0,7.3,1.43h0a19.16,19.16,0,0,0,3.81-.38,53.34,53.34,0,0,0-16,27ZM101.47,45a53.49,53.49,0,0,1,37,39.24H126.8c-2.22-12-7.27-22.53-14.1-30.1a40.71,40.71,0,0,0-11.41-9l.18-.15Zm-55,39.24H34.79A53.48,53.48,0,0,1,71.75,45l.19.14a40.6,40.6,0,0,0-11.42,9c-6.82,7.57-11.88,18.09-14.1,30.1Zm31-36a33.85,33.85,0,0,0-13.13,9.28c-5.93,6.58-10.4,15.66-12.58,26.09h69.84c-2.19-10.43-6.65-19.51-12.58-26.09a33.85,33.85,0,0,0-13.13-9.28A24.38,24.38,0,0,1,86.61,50h0A24.38,24.38,0,0,1,77.4,48.19Zm51.95-30.7h0a17.76,17.76,0,0,1,17.71,17.72h0a17.76,17.76,0,0,1-17.71,17.72h0a17.77,17.77,0,0,1-17.72-17.72h0A17.78,17.78,0,0,1,129.35,17.49ZM86.17,0h0a22.42,22.42,0,0,1,22.36,22.36h0A22.43,22.43,0,0,1,86.17,44.73h0A22.43,22.43,0,0,1,63.8,22.36h0A22.43,22.43,0,0,1,86.17,0Zm55.67,83.69h15.52A44.77,44.77,0,0,0,147.4,63,27.11,27.11,0,0,0,137,55.67a19.38,19.38,0,0,1-7.3,1.43h0a19.08,19.08,0,0,1-3.81-.38A53.26,53.26,0,0,1,141.84,83.69Z"/></g></g></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.75 84.19">
+                    <defs>
+                        <style>
+                            .cls-1 {
+                                fill: #d60b52;
+                            }
+                        </style>
+                    </defs>
+                    <g id="Layer_2" data-name="Layer 2">
+                        <g id="TopMwnu">
+                            <path id="_439859488" data-name=" 439859488" class="cls-1"
+                                d="M141.47,53.1a42.4,42.4,0,0,1,29.28,31.09h-9.21c-1.77-9.51-5.76-17.85-11.17-23.85a32.57,32.57,0,0,0-9.05-7.13Zm-98.14-35h0A17.77,17.77,0,0,1,61.05,35.86h0A17.76,17.76,0,0,1,43.33,53.57h0A17.76,17.76,0,0,1,25.62,35.86h0A17.76,17.76,0,0,1,43.33,18.14Zm-14.06,35A42.39,42.39,0,0,0,0,84.19H9.22C11,74.68,15,66.34,20.38,60.34a32.42,32.42,0,0,1,9.05-7.13ZM28.9,83.69H13.39A44.67,44.67,0,0,1,23.35,63a27.11,27.11,0,0,1,10.4-7.35,19.3,19.3,0,0,0,7.3,1.43h0a19.16,19.16,0,0,0,3.81-.38,53.34,53.34,0,0,0-16,27ZM101.47,45a53.49,53.49,0,0,1,37,39.24H126.8c-2.22-12-7.27-22.53-14.1-30.1a40.71,40.71,0,0,0-11.41-9l.18-.15Zm-55,39.24H34.79A53.48,53.48,0,0,1,71.75,45l.19.14a40.6,40.6,0,0,0-11.42,9c-6.82,7.57-11.88,18.09-14.1,30.1Zm31-36a33.85,33.85,0,0,0-13.13,9.28c-5.93,6.58-10.4,15.66-12.58,26.09h69.84c-2.19-10.43-6.65-19.51-12.58-26.09a33.85,33.85,0,0,0-13.13-9.28A24.38,24.38,0,0,1,86.61,50h0A24.38,24.38,0,0,1,77.4,48.19Zm51.95-30.7h0a17.76,17.76,0,0,1,17.71,17.72h0a17.76,17.76,0,0,1-17.71,17.72h0a17.77,17.77,0,0,1-17.72-17.72h0A17.78,17.78,0,0,1,129.35,17.49ZM86.17,0h0a22.42,22.42,0,0,1,22.36,22.36h0A22.43,22.43,0,0,1,86.17,44.73h0A22.43,22.43,0,0,1,63.8,22.36h0A22.43,22.43,0,0,1,86.17,0Zm55.67,83.69h15.52A44.77,44.77,0,0,0,147.4,63,27.11,27.11,0,0,0,137,55.67a19.38,19.38,0,0,1-7.3,1.43h0a19.08,19.08,0,0,1-3.81-.38A53.26,53.26,0,0,1,141.84,83.69Z" />
+                        </g>
+                    </g>
+                </svg>
                 همکاری با ما
             </div>
 
@@ -649,6 +676,59 @@
         </div>
     </div>
 </header>
+
+<section class="aboutUs">
+    <div class="line"></div>
+
+    <div class="flex">
+        <div>
+            <span class="bar"></span>
+            <div class="content">
+                <div class="border">
+                    <div class="inside">
+                        <span class="title">دوره تشکیل شده</span>
+                        <span class="num">250</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <span class="bar"></span>
+            <div class="content">
+                <div class="border">
+                    <div class="inside">
+                        <span class="title">دانشجو</span>
+                        <span class="num">1200</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <span class="bar"></span>
+            <div class="content">
+                <div class="border">
+                    <div class="inside">
+                        <span class="title">ساعت آموزش</span>
+                        <span class="num">5000</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <span class="bar"></span>
+            <div class="content">
+                <div class="border">
+                    <div class="inside">
+                        <span class="title">سال فعالیت</span>
+                        <span class="num">22</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 <a href="#" class="atnaHost">
     آتنا‌هاست
     <span>همیشه میزبان شماییم</span>
@@ -3470,6 +3550,194 @@
             </div>
         </div>
     </section>
+
+    <section class="mainPageSection homeVideo">
+        <div class="title">
+            <div class="pic">
+                <div class="text">جدید ترین دوره‌ها</div>
+            </div>
+        </div>
+        <div class="videoTab">
+            <button data-category="studentOpinion" data-onClick="active" data-group="homeVideo" class="active">نظرات
+                دانشجویان</button>
+            <button data-category="Teachers" data-onClick="active" data-group="homeVideo">مدرس دوره</button>
+        </div>
+        <div class="main">
+            <h2>Tahlildadeh <span>TV</span></h2>
+            <div class="tv">
+                <video controls=""
+                    poster="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                    __idm_id__="90113" preload="none" width="100%" height="auto">
+                    <source src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                        type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="orangeBar">
+                <span>نظرات دانشجویان</span>
+                <img src="images/img/Movie.svg" alt="">
+            </div>
+        </div>
+        <div class="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/Films/001 Next steps.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/Films/001 Next steps.mp4" alt="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                alt="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                alt="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                alt="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                alt="moreVideos">
+            <img data-onClick="active" data-group="homeVideos"
+                src="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/web design sample teachign.png"
+                data-videosrc="http://www.tahlildadeh.com/Files/TeachingSample/WebDesign/digiTeachingSample.mp4"
+                alt="moreVideos" class="active">
+        </div>
+    </section>
+
+    <secttion class="mainPageSection news">
+        <div>
+            <div class="image">
+                <img src="images/img/homeSlider-Blank.png" alt="NEWS">
+            </div>
+            <div class="content">
+                <h3 class="ellipsis">یه چیزی ارزون شد!</h3>
+                <p>در این سری از مقالات از آموزشگاه تحلیل داده، ایجاد صفحه اصلی با Django را یاد می گیرید. در این سری از
+                    مقالات از آموزشگاه تحلیل داده، ایجاد صفه اصلی </p>
+            </div>
+        </div>
+        <div>
+            <div class="image">
+                <img src="images/img/newsProp.jpg" alt="NEWS">
+            </div>
+            <div class="content">
+                <h3 class="ellipsis">یه چیزی ارزون شد!</h3>
+                <p>در این سری از مقالات از آموزشگاه تحلیل داده، ایجاد صفحه اصلی با Django را یاد می گیرید. در این سری از
+                    مقالات از آموزشگاه تحلیل داده، ایجاد صفه اصلی </p>
+            </div>
+        </div>
+        <div>
+            <div class="image">
+                <img src="images/img/newsProp.jpg" alt="NEWS">
+            </div>
+            <div class="content">
+                <h3 class="ellipsis">یه چیزی ارزون شد!</h3>
+                <p>در این سری از مقالات از آموزشگاه تحلیل داده، ایجاد صفحه اصلی با Django را یاد می گیرید. در این سری از
+                    مقالات از آموزشگاه تحلیل داده، ایجاد صفه اصلی </p>
+            </div>
+        </div>
+        <div>
+            <div class="image">
+                <img src="images/img/newsProp.jpg" alt="NEWS">
+            </div>
+            <div class="content">
+                <h3 class="ellipsis">یه چیزی ارزون شد!</h3>
+                <p>در این سری از مقالات از آموزشگاه تحلیل داده، ایجاد صفحه اصلی با Django را یاد می گیرید. در این سری از
+                    مقالات از آموزشگاه تحلیل داده، ایجاد صفه اصلی </p>
+            </div>
+        </div>
+
+
+    </secttion>
+
+    <section class="mainPageSection Qcomment">
+        <div class="title">
+            <div class="pic">
+                <div class="text">نظرات و سوالات</div>
+            </div>
+        </div>
+        <div class="contain">
+            <header>
+                سوالتو بپرس!
+            </header>
+            <div>
+                <section class="fast">
+                    <div class="question" data-id="2038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="answer" data-id="20a38a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="answer" data-id="20a38a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="205538a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="answer" data-id="2d6038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="21a038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="21a038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="21a038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="21a038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+                    <div class="question" data-id="21a038a">
+                        <div class="icon" data-user="علی حسینی"></div>
+                        <span>
+                            <span>07/010/1400</span> <span>15:29</span>
+                            آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
+                            <i></i>
+                    </div>
+
+                </section>
+            </div>
+            <button>موارد بیشتری رو ببین!</button>
+        </div>
+    </section>
 </section>
 
 <footer class="footer">
@@ -3575,7 +3843,9 @@
         <div class="layer3">
             <a target="_blank" href="https://www.youtube.com/user/tahlildadeh" class="footerImage two"></a>
             <a target="_blank" href="https://www.instagram.com/tahlildadeh" class="footerImage three"></a>
-            <a target="_blank" href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/" class="footerImage five"></a>
+            <a target="_blank"
+                href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/"
+                class="footerImage five"></a>
             <a target="_blank" href="https://chatwith.io/s/tahlildadeh" class="footerImage six"></a>
             <a target="_blank" href="https://t.me/tahlildadeh" class="footerImage seven"></a>
         </div>
