two button system designed for comments

--- a/content.html
+++ b/content.html
@@ -3735,7 +3735,11 @@
 
                 </section>
             </div>
-            <button>موارد بیشتری رو ببین!</button>
+            <hr>
+            <div class="buttons">
+                <button>موارد بیشتری رو ببین!</button>
+                <button class="close">بستن</button>
+            </div>
         </div>
     </section>
 </section>
