qc open and close animation added

--- a/content.html
+++ b/content.html
@@ -3764,7 +3764,7 @@
             <hr>
 
             <div class="buttons">
-                <button>موارد بیشتری رو ببین!</button>
+                <button class="more">موارد بیشتری رو ببین!</button>
                 <button class="close">بستن</button>
             </div>
         </div>
