qcomment ready except mobile res part

--- a/content.html
+++ b/content.html
@@ -3702,7 +3702,7 @@
                             <i></i>
                     </div>
                     <div class="answer" data-id="20a38a" data-title="عنوان سوال">
-                        <div class="icon" data-user="علی حسینی"></div>
+                        <div class="icon" data-admin="علی حسینی"></div>
                         <span>
                             <span>07/010/1400</span> <span>15:29</span>
                             آیا میشه توی دوره به صورت آنلاین شرکت کرد؟
